# thermal-desktop

./: .gitignore  ARCH-INSTALL-GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  libansi.rlib  libstate_detector.rlib  tasks.jsonl
.beads/: config.yaml  last-touched
.claude/commands/: breakdown.md  draft.md  execute.md  plan.md  ready.md  review.md  scout.md  split.md  status.md
colors/: thermal.toml
config/: profiles.toml  trust-tiers.toml
crates/thermal-audio/: Cargo.toml
crates/thermal-audio/src/: main.rs
crates/thermal-bar/: CLAUDE.md  Cargo.toml  tasks.json  tasks.jsonl
crates/thermal-bar/src/: dbus.rs  layout.rs  main.rs  metrics.rs  renderer.rs  sparkline.rs  wayland.rs
crates/thermal-bar/src/modules/: agent_module.rs  claude_module.rs  clock.rs  hotkeys.rs  metrics_module.rs  mod.rs  voice.rs  workspace_map.rs
crates/thermal-commander/: Cargo.toml
crates/thermal-commander/src/: main.rs  mcp.rs
crates/thermal-commander/src/tools/: claude.rs  hyprland.rs  input.rs  launcher.rs  mod.rs  screenshot.rs  system_metrics.rs  utility.rs
crates/thermal-conductor/: CLAUDE.md  Cargo.toml  tasks.json  tasks.jsonl
crates/thermal-conductor/src/: agent_graph.rs  agent_timeline.rs  ansi.rs  audio.rs  backend.rs  capture.rs  client.rs  conductor.rs  context_environment.rs  daemon.rs  dbus.rs  git_watcher.rs  grid_renderer.rs  hud.rs  inject.rs  input.rs  kitty.rs  kitty_graphics.rs  layout.rs  main.rs  osc633.rs  profiles_config.rs  protocol.rs  pty.rs  renderer.rs  session.rs  state_detector.rs  terminal.rs  tmux.rs  window.rs
crates/thermal-conductor/src/tui/: chat.rs  mod.rs  profiles.rs  services.rs  sessions.rs  spawn.rs
crates/thermal-core/: CLAUDE.md  Cargo.toml  tasks.json  tasks.jsonl
crates/thermal-core/src/: claude_state.rs  config.rs  geometry.rs  lib.rs  message.rs  palette.rs  pane.rs  session.rs  state.rs  text.rs  wgpu_ctx.rs
crates/thermal-dispatch-cli/: Cargo.toml
crates/thermal-dispatch-cli/src/: main.rs
crates/thermal-dispatcher/: Cargo.toml
crates/thermal-dispatcher/src/: api.rs  config.rs  context.rs  escalation.rs  executor.rs  main.rs  tools.rs
crates/thermal-face/: Cargo.toml
crates/thermal-face/src/: main.rs
crates/thermal-hud/: Cargo.toml
crates/thermal-hud/src/: main.rs  renderer.rs  voice.rs  wayland.rs
crates/thermal-launch/: CLAUDE.md  Cargo.toml  tasks.json  tasks.jsonl
crates/thermal-launch/src/: desktop.rs  main.rs
crates/thermal-lock/: CLAUDE.md  Cargo.toml  build.rs  tasks.json  tasks.jsonl
crates/thermal-lock/src/: auth.rs  main.rs
crates/thermal-messages/: Cargo.toml
crates/thermal-messages/src/: main.rs  persist.rs  routing.rs
crates/thermal-monitor/: Cargo.toml
crates/thermal-monitor/src/: main.rs
crates/thermal-notify/: CLAUDE.md  Cargo.toml  tasks.json  tasks.jsonl
crates/thermal-notify/src/: audio.rs  dbus.rs  main.rs  renderer.rs  stack.rs  surface.rs  timer.rs  urgency.rs
crates/thermal-screensaver/: Cargo.toml
crates/thermal-screensaver/src/: main.rs
crates/thermal-terminal/: Cargo.toml
crates/thermal-terminal/src/: input.rs  lib.rs  osc633.rs  pty.rs  terminal.rs
crates/thermal-voice/: Cargo.toml
crates/thermal-voice/src/: main.rs  streaming.rs  transcript_filter.rs  vad.rs  wakeword.rs
crates/thermal-wallpaper/: Cargo.toml
crates/thermal-wallpaper/src/: main.rs
docs/: HOTKEYS.md
docs/design/: session-protocol.md
docs/research/: ai-terminal-landscape.md  gpu-text-rendering.md  performance-audit-gpt5.md  terminal-emulation.md  wayland-wgpu-ecosystem.md
scripts/: codex-state-adapter.sh  copilot-state-tracker.sh  generate-theme.py  thermal-vad-toggle.sh  thermal-voice-toggle.sh  thermal-voice.py
shaders/: thermal-bg.frag
