[workspace]
resolver = "2"
members = [
    "crates/thermal-conductor",
    "crates/thermal-bar",
    "crates/thermal-launch",
    "crates/thermal-notify",
    "crates/thermal-lock",
    "crates/thermal-monitor",
    "crates/thermal-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/GGPrompts/thermal-desktop"

[workspace.dependencies]
# Wayland
smithay-client-toolkit = "0.19"
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols-wlr = "0.3"
winit = { version = "0.30", features = ["wayland"] }

# GPU Rendering
wgpu = "23"
glyphon = "0.7"
cosmic-text = "0.12"

# Terminal
alacritty_terminal = "0.25"
vte = "0.14"

# System
nix = { version = "0.29", features = ["term", "signal", "event", "user"] }
notify = "7"
zbus = { version = "5", features = ["tokio"] }
rodio = "0.20"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"
pollster = "0.3"
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }
