[package]
name = "thermal-audio"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermal-audio"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
rodio = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
md-5 = "0.10"
