[package]
name = "thermal-commander"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermal-commander"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
base64 = "0.22"
