[package]
name = "thermal-conductor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermal-conductor"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
