[package]
name = "thermal-conductor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermal-conductor"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
wgpu = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
alacritty_terminal = { workspace = true }
glyphon = { workspace = true }
bytemuck = { workspace = true }
parking_lot = "0.12"
