[package]
name = "thermal-dispatch-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
