[package]
name = "thermal-dispatcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermal-dispatcher"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
