[package]
name = "thermal-lock"
version.workspace = true
edition.workspace = true

[dependencies]
thermal-core = { path = "../thermal-core" }
wgpu = { workspace = true }
glyphon = { workspace = true }
cosmic-text = { workspace = true }
winit = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
