[package]
name = "thermal-messages"
version.workspace = true
edition.workspace = true
description = "Message bus daemon for inter-agent communication"

[[bin]]
name = "thermal-messages"
path = "src/main.rs"

[dependencies]
thermal-core = { path = "../thermal-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
