[package]
name = "thermal-notify"
version.workspace = true
edition.workspace = true

[dependencies]
thermal-core = { path = "../thermal-core" }
wgpu = { workspace = true }
glyphon = { workspace = true }
cosmic-text = { workspace = true }
winit = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true }
