[package]
name = "thermal-voice"
version.workspace = true
edition.workspace = true
description = "Push-to-talk voice input daemon with local Whisper STT"

[[bin]]
name = "thermal-voice"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"
toml = "0.8"
