[package]
name = "thermal-voice"
version.workspace = true
edition.workspace = true
description = "Push-to-talk voice input daemon with local Whisper STT"

[[bin]]
name = "thermal-voice"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"
toml = "0.8"
tokio-tungstenite = "0.26"
futures-util = "0.3"
rustpotter = "3.0"
# Pin half to a version compatible with candle-core 0.2.2's use of rand 0.8.
# half >= 2.5 switched to rand 0.9, causing trait conflicts in candle-core.
half = ">=2.1, <2.5"
